@@ -108,7 +108,7 @@ CREATE TABLE "django_session" (
 INSERT INTO "django_session" VALUES('32b61f225cb17bc7e027541916d4f99c', 'KGRwMQpTJ19hdXRoX3VzZXJfYmFja2VuZCcKcDIKUydkamFuZ28uY29udHJpYi5hdXRoLmJhY2tl
 bmRzLk1vZGVsQmFja2VuZCcKcDMKc1MnX2F1dGhfdXNlcl9pZCcKcDQKSTEKcy5kYjI2ODY1ZjFh
 MGNiNDA0YjJkNDhiODVhOGFlZWZmMQ==
-', '2006-11-04 11:44:15.846512');
+', '2006-11-07 19:00:06.817761');
 CREATE TABLE "django_site" (
     "id" integer NOT NULL PRIMARY KEY,
     "domain" varchar(100) NOT NULL,
