@@ -1,3 +1,8 @@
+2006-10-24  Doug Hellmann  <dhellmann@racemi.com>
+
+	* views.py (external): Add the podcast id to the response to be
+	consistent with feed_list.
+
 2006-10-22  Doug Hellmann  <dhellmann@racemi.com>
 
 	* views.py (external): Add a view to fetch and parse the feed
