@@ -1,3 +1,12 @@
+2006-10-24  Doug Hellmann  <dhellmann@racemi.com>
+
+	* static/js/oneoffcast/user.js (do_add_to_queue): Call the server
+	to add the item to the queue.
+	(add_to_queue_callback): Handle response from the server.
+
+	* static/css/site.css: Remove underline from links in
+	podcast_entry divs.
+
 2006-10-22  Doug Hellmann  <dhellmann@racemi.com>
 
 	* static/js/oneoffcast/user.js: Add icons to list of feeds and
